--- a/config/database.yml
+++ b/config/database.yml
@@ -5,7 +5,7 @@
 #   gem 'sqlite3'
 development:
   adapter: postgresql
-  database: railstutorial
+  database: railstutorial_dev
   host: localhost
   username: rails_dev
   password: deltalovesqiscus
@@ -16,13 +16,19 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: sqlite3
-  database: db/test.sqlite3
+  adapter: postgresql
+  database: railstutorial_test
+  host: localhost
+  username: rails_dev
+  password: deltalovesqiscus
   pool: 5
   timeout: 5000
 
 production:
-  adapter: sqlite3
-  database: db/production.sqlite3
+  adapter: postgresql
+  database: railstutorial_prod
+  host: localhost
+  username: rails_dev
+  password: deltalovesqiscus
   pool: 5
   timeout: 5000
